✨ chore: Renomeação de variaveis

--- a/Código/view/CadastroCliente.html
+++ b/Código/view/CadastroCliente.html
@@ -87,7 +87,7 @@
               margin: 10px;
             "
             placeholder="Usuário"
-            name="cName"
+            name="nome"
             required=""
           />
           <input
@@ -103,7 +103,7 @@
               margin: 10px;
             "
             placeholder="CPF"
-            name="cCPF"
+            name="cpf"
             required=""
             pattern="[0-9]{3}[.][0-9]{3}[.][0-9]{3}[-][0-9]{2}"
             title="111.222.333-44"
@@ -120,7 +120,7 @@
               margin: 10px;
             "
             placeholder="CNH"
-            name="cCNH"
+            name="cnh"
             required=""
             pattern="[0-9]{11}"
             title="11 Números"
@@ -137,7 +137,7 @@
               margin: 10px;
             "
             placeholder="Telefone"
-            name="cTelefone"
+            name="telefone"
             required=""
             pattern="[0-9]{2}[-][0-9]{4,5}[-][0-9]{4}"
             title="35-99999-8888"
@@ -154,7 +154,7 @@
               margin: 10px;
             "
             placeholder="Email"
-            name="cEmail"
+            name="email"
             required=""
           />
           <div class="d-flex">
