--- a/Código/view/TelaVeiculo.html
+++ b/Código/view/TelaVeiculo.html
@@ -84,7 +84,7 @@
             border: 4px solid rgb(255, 255, 255);
             margin: 10px;
           "
-          href=""
+          href="../view/ListaAluguel.php"
           >ALUGUEIS</a
         >
       </div>
@@ -104,7 +104,7 @@
             border: 4px solid rgb(255, 255, 255);
             margin: 10px;
           "
-          href=""
+          href="ListaVeiculo.php"
           >LISTAR</a
         >
       </div>
